tests/ui/resolve/token-error-correct.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct.rs:4:12
   |
LL | fn main() {
   |           - closing delimiter possibly meant for this
LL |     foo(bar(;
   |            ^ unclosed delimiter
LL | }
   | ^ mismatched closing delimiter

error: aborting due to 1 previous error

